<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.notefy.activity.SettingsActivity" >

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/general_setting"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorPrimary" />

                <CheckBox
                    android:id="@+id/cb_notefy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:button="@drawable/custom_checkbox_selector"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/enable_tracking"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/notification_settings"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorPrimary" />

                <CheckBox
                    android:id="@+id/cb_alert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:button="@drawable/custom_checkbox_selector"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/alert"
                    android:textColor="?attr/colorPrimary" />

                <CheckBox
                    android:id="@+id/cb_notificaiton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:button="@drawable/custom_checkbox_selector"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/notification"
                    android:textColor="?attr/colorPrimary" />

                <CheckBox
                    android:id="@+id/cb_toast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:button="@drawable/custom_checkbox_selector"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/toast"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/alert_settings"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorPrimary" />

                <CheckBox
                    android:id="@+id/cb_play_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:button="@drawable/custom_checkbox_selector"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/play_sound"
                    android:textColor="?attr/colorPrimary" />

                <CheckBox
                    android:id="@+id/cb_vibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:button="@drawable/custom_checkbox_selector"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/enable_vibrate"
                    android:textColor="?attr/colorPrimary" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>